# groundwater-daily-estimation-tsd

./: .flake8  .gitignore  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  tsd_env.yml
data/: __init__.py
data/sample_data/: sample_data.csv  sample_data.xlsx
examples/: comprehensive_multi_well_calibration_csv.py  groundwater_estimation_colab.ipynb  single_well.R  single_well_cal.R  single_well_calibration_csv.R  single_well_calibration_csv.py  single_well_est.R
src/groundwater_estimation/: __init__.py
src/groundwater_estimation/core/: __init__.py  data_loader.py  local_regional.py
src/groundwater_estimation/data/: __init__.py
src/groundwater_estimation/evaluation/: __init__.py  performance_metrics.py
src/groundwater_estimation/utils/: __init__.py  create_sample_data.py  well_distance.py
tests/: test_column_detection.py  test_import.py
